<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Grip&amp;Shoot</string>
    
    <!-- Common -->
    <string name="none">None</string>
    <string name="grip_device_name">Grip-C48A</string>
    
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    
    <!-- Waiting Screen -->
    <string name="tap_grip_id">Tap GRIP ID</string>
    
    <!-- Info Screen -->
    <string name="how_do_i_pair">How do I pair with my phone?</string>
    <string name="how_do_i_change">How do I change the battery?</string>
    <string name="what_is_the_grip_shoot">What is the Grip &amp; Shoot?</string>
    <string name="website">http://gripandshoot.com</string>
    <string name="version">version</string>
    
    <!-- Setting -->
    <string name="default_setting">Default</string>
    
    <string name="ar_16_9">16:9</string>
    <string name="ar_4_3">4:3</string>
    <string name="ar_1_1">1:1</string>

    <string name="photo_aspect_ratio">Photo Aspect Ratio</string>
    
    <string name="photo_quality">Photo Quality</string>
    <string name="photo_quality_fine">Fine</string>

    <string name="custom_photo_save_path">Customize photo save path</string>
    <string name="photo_save_path">Photo Save Path</string>

    <string name="video_aspect_ratio">Video Aspect Ratio</string>
    
    <string name="video_back_profile">Back Camera Profile</string>
    <string name="video_front_profile">Front Camera Profile</string>

    <string name="custom_video_save_path">Customize video save path</string>
    <string name="video_save_path">Video Save Path</string>
</resources>
